--- a/config.json
+++ b/config.json
@@ -11,7 +11,8 @@
   "terminologyServers" : [
     {"version":2,"url":"http://fhir.hl7.org.nz/dstu2/"},
     {"version":2,"url":"http://fhir2.healthintersections.com.au/open/"},
-    {"version":3,"url":"http://fhir3.healthintersections.com.au/open/"}
+    {"version":3,"url":"http://fhir3.healthintersections.com.au/open/"},
+    {"version":4,"url":"http://192.168.70.187/fhir/"}
   ],
   "allKnownServers":[
     {"name":"Grahames STU2 server","url":"http://fhir2.healthintersections.com.au/open/","version":2,"everythingOperation":true},
@@ -20,8 +21,11 @@
     {"name":"HealthConnex STU3 server","url":"http://sqlonfhir-may.azurewebsites.net/fhir/","version":3,"everythingOperation":true},
     {"name":"Local HAPI STU2","url":"http://localhost:8080/baseDstu2/","version":2,"everythingOperation":true},
     {"name":"Local HAPI STU3","url":"http://localhost:8080/baseDstu3/","version":3,"everythingOperation":true},
+    {"name":"Local HAPI FhirR4","url":"http://localhost:8080/fhir/","version":4,"everythingOperation":true}, 
+    {"name":"Local HAPI BaseR4","url":"http://localhost:8080/baseR4/","version":4,"everythingOperation":true}, 
     {"name":"Public HAPI server STU2 server","url":"http://fhirtest.uhn.ca/baseDstu2/","version":2,"everythingOperation":true},
     {"name":"Public HAPI server STU3 server","url":"http://fhirtest.uhn.ca/baseDstu3/","version":3,"everythingOperation":true},
-    {"name":"HL7 New Zealand STU2 server","url":"http://fhir.hl7.org.nz/baseDstu2/","version":2}
+    {"name":"HL7 New Zealand STU2 server","url":"http://fhir.hl7.org.nz/baseDstu2/","version":2},
+    {"name":"SnowStormMinsalQA","url":"http://192.168.70.187/fhir/","version":4}
   ]
 }
